--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sectionNav">
+            
+        </div>
+    </div>
 </body>
 </html>
