--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="sectionNav">
-            
+      <div class="navSection">
+        <div class="leftNav">
+          <div class="logoSection">
+            <div class="logoImgWrapper">
+              <img src="./images/logo.PNG" alt="logo" />
+            </div>
+            <h3>SassBox</h3>
+          </div>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
