centerNav base styles completed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             <h3>SassBox</h3>
           </div>
         </div>
+        <div class="centerNav">
+          <ul class="centerMenu">
+            <li class="menuItem"><a href="#" class="menuLink">Dashboard</a></li>
+            <li class="menuItem"><a href="#" class="menuLink">Profile</a></li>
+            <li class="menuItem"><a href="#" class="menuLink">Messages</a></li>
+            <li class="menuItem"><a href="#" class="menuLink">About us</a></li>
+            <li class="menuItem"><a href="#" class="menuLink">Login</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
