rightNav base styles completed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="container">
@@ -25,6 +32,19 @@
             <li class="menuItem"><a href="#" class="menuLink">About us</a></li>
             <li class="menuItem"><a href="#" class="menuLink">Login</a></li>
           </ul>
+        </div>
+        <div class="rightNav">
+          <div class="groupIcon">
+            <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-cog" aria-hidden="true"></i></a>
+          </div>
+          <div class="userSection">
+            <div class="statusConnection">Online</div>
+            <div class="profileUser">
+              <img src="./images/team4.png" alt="user" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
