mobile menu finished

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         </div>
         <div class="centerNav">
           <ul class="centerMenu">
-            <li class="menuItem"><a href="#" class="menuLink">Dashboard</a></li>
+            <li class="menuItem">
+              <a href="#" class="menuLink active">Dashboard</a>
+            </li>
             <li class="menuItem"><a href="#" class="menuLink">Profile</a></li>
             <li class="menuItem"><a href="#" class="menuLink">Messages</a></li>
             <li class="menuItem"><a href="#" class="menuLink">About us</a></li>
@@ -46,7 +48,20 @@
             </div>
           </div>
         </div>
+        <div class="mobileNav">
+          <span class="mainLine"></span>
+        </div>
+        <ul class="mobileNavMenu">
+          <li class="menuItem">
+            <a href="#" class="menuLink active">Dashboard</a>
+          </li>
+          <li class="menuItem"><a href="#" class="menuLink">Profile</a></li>
+          <li class="menuItem"><a href="#" class="menuLink">Messages</a></li>
+          <li class="menuItem"><a href="#" class="menuLink">About us</a></li>
+          <li class="menuItem"><a href="#" class="menuLink">Login</a></li>
+        </ul>
       </div>
     </div>
+    <script src="sctipt.js"></script>
   </body>
 </html>
